--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <script> src="app.js" </script>
+  </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Elijah Saint Pierre's Page</h1>
   </body>
 </html>
