minor site fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Quest - Portfolio</title>
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -27,9 +28,9 @@
     <!-- Header section -->
     <header id="home">
         <div class="hero">
-            <h1>DEV QUEST<span class="cursor"></span></h1>
-            <h2>SOFTWARE DEVELOPER</h2>
-            <p>Level 30 Code Warrior | Pixel Perfectionist | Bug Slayer</p>
+            <h1>Elijah Saint Pierre<span class="cursor"></span></h1>
+            <h2>Software & Game Developer</h2>
+            <p>College graduate with minor industry experience</p>
         </div>
     </header>
 
@@ -37,10 +38,10 @@
     <div class="container">
         <!-- About section -->
         <section id="about" class="window">
-            <h2>ABOUT ME</h2>
+            <h2>About Me</h2>
             <div class="about-grid">
                 <div class="avatar">
-                    <img src="/api/placeholder/150/150" alt="Developer Avatar">
+                    <img src="/Images/profMe.jpg/150/100" alt="Picture of myself">
                     <div class="stats">
                         <div class="stat">
                             <span>Coding</span>
@@ -69,14 +70,14 @@
                     </div>
                 </div>
                 <div class="bio">
-                    <h3>THE JOURNEY SO FAR</h3>
+                    <h3>Quick Bio</h3>
                     <p>Greetings, traveler! I am a full-stack developer with a passion for creating elegant solutions to complex problems. My quest began many moons ago when I discovered the magical world of programming.</p>
                     <p>After gaining experience points in various realms of software development, I've honed my skills in crafting responsive web applications, optimizing database performance, and slaying bugs with precision.</p>
                     <p>When I'm not coding, you might find me exploring new technologies, contributing to open-source projects, or embarking on side-quests to expand my knowledge.</p>
                     <p>I believe in writing clean, maintainable code and creating user experiences that delight and inspire. Let's join forces and build something amazing together!</p>
                     <div class="btn-group" style="margin-top: 20px;">
-                        <a href="#contact" class="btn">JOIN MY PARTY</a>
-                        <a href="#" class="btn" id="resumeBtn">VIEW MY SCROLL (RESUME)</a>
+                        <a href="#contact" class="btn">Contact</a>
+                        <a href="#" class="btn" id="resumeBtn">Resume</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +139,7 @@
 
         <!-- Skills section -->
         <section id="skills" class="window">
-            <h2>ABILITIES & SPELLS</h2>
+            <h2>Skills</h2>
             <div class="skills-container">
                 <!-- Frontend Skills -->
                 <div class="skill-category">
@@ -387,11 +388,11 @@
                     <h3>CONTACT INFO</h3>
                     <div class="contact-item">
                         <span class="contact-icon">✉</span>
-                        <span>dev@example.com</span>
+                        <span>ram1055@hotmail.com</span>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">☎</span>
-                        <span>+1 234 567 8900</span>
+                        <span>+1 302 249 3102</span>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">⌂</span>
@@ -418,7 +419,7 @@
                     </ul>
                 </div>
                 <div class="contact-form">
-                    <h3>SEND A RAVEN</h3>
+                    <h3>SEND A Message</h3>
                     <form id="contactForm">
                         <div class="form-group">
                             <label for="name">Your Name</label>
@@ -436,7 +437,7 @@
                             <label for="message">Message</label>
                             <textarea id="message" name="message" required></textarea>
                         </div>
-                        <button type="submit" class="btn">CAST SPELL (SEND)</button>
+                        <button type="submit" class="btn">SEND</button>
                     </form>
                 </div>
             </div>
@@ -448,10 +449,8 @@
         <ul class="social-links">
             <li><a href="#">GitHub</a></li>
             <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">CodePen</a></li>
         </ul>
-        <p class="copyright">© 2025 DevQuest. All rights reserved. Crafted with ♥ and magic.</p>
+        <p class="copyright">© 2025 Elijah Saint Pierre. All rights reserved.</p>
     </footer>
 
     <!-- Project Modal -->
