--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo">
-                <a href="#home">DEV QUEST</a>
+                <a href="#home">Home</a>
             </div>
             <button class="menu-btn" id="menuBtn">☰</button>
             <ul class="nav-links" id="navLinks">
