--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Tower Mercs</h3>
-                        <p class="project-desc">A turn-based action adventure game with multiplayer, where you must explore a world and deafeat monsters.</p>
+                        <p class="project-desc">A turn-based action adventure game with multiplayer, where you explore a world, deafeat monsters, and grow stronger to eventually slay the evil witch.</p>
                         <div class="project-links">
                             <a href="#" class="btn project-detail-btn" data-project="project2">Details</a>
                             <a href="#" class="btn">Demo</a>
@@ -149,13 +149,13 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="Images/mlPong.png" alt="Project 2">
+                        <img src="Images/mlPong.png" alt="Project 4">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">ML Pong</h3>
                         <p class="project-desc">A basic program teaching machine learning agents Pong.</p>
                         <div class="project-links">
-                            <a href="#" class="btn project-detail-btn" data-project="project2">Details</a>
+                            <a href="#" class="btn project-detail-btn" data-project="project4">Details</a>
                             <a href="#" class="btn">Demo</a>
                             <a href="#" class="btn">Code</a>
                         </div>
@@ -165,13 +165,13 @@
                 <!-- Project 5 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="Images/dreamscapes.png" alt="Project 6">
+                        <img src="Images/dreamscapes.png" alt="Project 5">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">DreamWare</h3>
                         <p class="project-desc">A Kiosk game where you can play up to 4 minigames and compete with friends.</p>
                         <div class="project-links">
-                            <a href="#" class="btn project-detail-btn" data-project="project2">Details</a>
+                            <a href="#" class="btn project-detail-btn" data-project="project5">Details</a>
                             <a href="#" class="btn">Demo</a>
                             <a href="#" class="btn">Code</a>
                         </div>
@@ -187,7 +187,7 @@
                         <h3 class="project-title">This portfolio site</h3>
                         <p class="project-desc">A portfolio site built with basic html, css, and javascript.</p>
                         <div class="project-links">
-                            <a href="#" class="btn project-detail-btn" data-project="project2">Details</a>
+                            <a href="#" class="btn project-detail-btn" data-project="project6">Details</a>
                             <a href="#" class="btn">Demo</a>
                             <a href="#" class="btn">Code</a>
                         </div>
